fixed overflow mishap

--- a/css/404.css
+++ b/css/404.css
@@ -9,6 +9,8 @@ body {
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
     overflow: hidden;
+    position: relative;
+    height: 100vh;
 }
 
 .bucket {   /* PAGE CONTAINER */
